@@ -32,7 +32,8 @@ libgomp_la_SOURCES = alloc.c barrier.c critical.c env.c error.c iter.c \
 	loop.c ordered.c parallel.c sections.c single.c team.c work.c \
 	lock.c mutex.c proc.c sem.c bar.c time.c fortran.c
 
-nodist_include_HEADERS = omp.h omp_lib.h omp_lib.f90 libgomp_f.h
+nodist_noinst_HEADERS = libgomp_f.h
+nodist_include_HEADERS = omp.h omp_lib.h omp_lib.f90
 if USE_FORTRAN
 nodist_include_HEADERS += omp_lib.mod omp_lib_kinds.mod
 endif
